--- a/src/embed.html
+++ b/src/embed.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="<%= assetPath %>/embed.css" />
 </head>
 <body>
-    <div class="interactive-embed js-interactive">Hejsan!</div>
+    <div class="interactive-embed js-interactive">Hejsan kompis!</div>
     <script src="<%= assetPath %>/embed.js"></script>
     <script>
         init(document.querySelector('.js-interactive'), {'assetPath': '<%= assetPath %>'});
