--- a/src/js/text/cardsTemplate.html
+++ b/src/js/text/cardsTemplate.html
@@ -1,7 +1,7 @@
 
 
 {{#cards}}
-
+    {{{#valid}}}
         <div class="gv-card-wrapper">
             
 
@@ -26,7 +26,7 @@
         </div>
 
 
-        <div class="gv-body-wrapper">
+        <!-- <div class="gv-body-wrapper">
                 <div class="gv-card-item">
                     <h2>{{{PolicyOneHeading}}}</h2>
                     <h3  class="gv-sub-header">Priority:{{{PolicyOnePriority}}}</h3 >
@@ -59,7 +59,7 @@
                 </div>
 
 
-        </div>    
-
+        </div>     -->
+           {{{/valid}}}
 
 {{/cards}}
