including graphics for buttons

--- a/src/js/text/embdTemplate.html
+++ b/src/js/text/embdTemplate.html
@@ -15,7 +15,7 @@
                     <h3  class="gv-header">{{{Leader}}}</h3 >
                 <h3  class="gv-header-sub neutral-3">{{{Party}}}</h3 >
                 <p class="gv-header-copy" id="shortCopy">{{{ShortCopy}}}</p>
-                
+                <div class="gv-read-more-btn" target-div="{{{shortURL}}}">{{{embedButtonCopy}}}</div>
                 </div>      
             </div>  
 
